jvimalprasathdev/src/objects/Prospect_Mortech__c.object
<CustomObject>
    <fields>
        <fullName>Product_1_Montly_Payment__c</fullName>
        <label>Product 1 Montly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Price__c</fullName>
        <label>Product 1 Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Rate__c</fullName>
        <label>Product 1 Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Vendor_Id__c</fullName>
        <label>Product 1 Vendor Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_APR__c</fullName>
        <label>Product 2 APR</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_Id__c</fullName>
        <label>Product 2 Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_LT_Product_Name__c</fullName>
        <label>Product 2 LT Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_Monthly_Payment__c</fullName>
        <label>Product 2 Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_Price__c</fullName>
        <label>Product 2 Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_Rate__c</fullName>
        <label>Product 2 Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_Vendor_Id__c</fullName>
        <label>Product 2 Vendor Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_APR__c</fullName>
        <label>Product 3 APR</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_Id__c</fullName>
        <label>Product 3 Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_LT_Product_Name__c</fullName>
        <label>Product 3 LT Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_Monthly_Payment__c</fullName>
        <label>Product 3 Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_Price__c</fullName>
        <label>Product 3 Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_Rate__c</fullName>
        <label>Product 3 Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_3_Vendor_Id__c</fullName>
        <label>Product 3 Vendor Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Close_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>Projected Close Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <label>Property Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <label>Property Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>2 Character Abbreviation</description>
        <label>Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Year_Built__c</fullName>
        <label>Property Year Built</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realtor_Email__c</fullName>
        <label>Realtor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realtor_Name__c</fullName>
        <label>Realtor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realtor_Phone__c</fullName>
        <label>Realtor Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Financing__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Secondary Financing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sellers_Email__c</fullName>
        <label>Sellers Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sellers_Name__c</fullName>
        <label>Sellers Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>0 = Marksman (Default)
1 = LendingTree
2 = LendingTree Hot Transfer
4 = GetSmart
5 = LowerMyBills
6 = NexTag
9 = CostCo (LendingTree CostCo Program)
15 = ZipSearch
18 = LeadPoint
19 = SpendOnLife
20 = Web Application
25 = Low.com
28 = GetLeadsFast
41 = Zoom Credit
43 = LoanWeb
44 = Bills.com
48 = ROOT Exchange
49 = Key Leads
50 = BuyerZone
51 = LowLender 
52 = Adchemy
55 = LenderRateMatch.com</description>
        <label>Source</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>0 = New Prospect
1 = Viewed
2 = Disqualified by Lender
3 = Awaiting Prospect Response
4 = Awaiting Prospect Approval
5 = Offer Accepted
6 = Ready to Close
7 = Funded
8 = Declined by Prospect
9 = Processing
10 = Followup
11 = To Be Decisioned
12 = Contacted</description>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Id__c</fullName>
        <label>Tracking Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>0=Single Family
1=Town House
3=Multi Family
4= Co-Op</description>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waive_E_Scrow__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Waive E Scrow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prospect Mortech</label>
    <nameField>
        <label>Prospect Mortech Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Mortech</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>